# FlareSolverr

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: autotag.yml  release-docker.yml
src/: __init__.py  app.py  dtos.py  flaresolverr.py  flaresolverr_service.py  models.py  service.py  sessions.py  tests.py  tests_sites.py  utils.py  wire.py
